Fixed text wrapping on small screens

--- a/src/styling/sectionWrapper.css
+++ b/src/styling/sectionWrapper.css
@@ -1,8 +1,9 @@
 .section-wrapper {
-    padding: 0.5rem;
-    margin: 0.2rem auto;
-    padding-bottom: 0;
-  }
+  padding: 0.5rem;
+  margin: 0.2rem auto;
+  width: 100%;
+  max-width: 48rem; /* add this */
+}
   
   .section-title {
     display: flex;
@@ -12,11 +13,10 @@
     text-align: center;
   }
   
-  .section-content {
-    font-size: 0.9rem;
-    line-height: 1.5;
-    color: #d1d5db;
-    max-width: 48rem;
-    line-height: 1.5;
-    min-width: 48rem;
-  }
+.section-content {
+  font-size: 0.9rem;
+  line-height: 1.5;
+  color: #d1d5db;
+  width: 100%;
+  max-width: 48rem;
+}
